--- a/codigos/playbooks/5_VarsAnsibleFacts.yml
+++ b/codigos/playbooks/5_VarsAnsibleFacts.yml
@@ -1,5 +1,5 @@
 - name: Ansible Facts Vars
-  hosts: rocky01
+  hosts: all
   tasks:
     - name: DEBUG | Ansible Facts - {{ ansible_facts }}
       ansible.builtin.debug:
