ajustes inventory para hosts:all 2

--- a/codigos/playbooks/8_RegisterOutputs.yml
+++ b/codigos/playbooks/8_RegisterOutputs.yml
@@ -6,7 +6,7 @@
     - name: SISOP | Find files
       find:
         path: /tmp
-        patterns: '*.cfg'
+        patterns: '*.*'
       register: output
 
     - name: SISOP | Show files
