ajustes inventory para hosts:all 3

--- a/codigos/playbooks/8_RegisterOutputs.yml
+++ b/codigos/playbooks/8_RegisterOutputs.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: SISOP | Find files
       find:
-        path: /tmp
+        path: /
         patterns: '*.*'
       register: output
 
