--- a/codigos/playbooks/10_AnsibleConditionals.yml
+++ b/codigos/playbooks/10_AnsibleConditionals.yml
@@ -14,12 +14,12 @@
     - name: APT | Update cache
       ansible.builtin.apt:
         update_cache: yes
-      when: ansible_distribution == "Debian"
+      when: ansible_distribution == "Ubuntu"
 
     - name: APT | Update Systems
       ansible.builtin.apt:
         name: "*"
         state: latest
-      when: ansible_distribution == "Debian"
+      when: ansible_distribution == "Ubuntu"
 
 ...
